--- a/my-index.html
+++ b/my-index.html
@@ -143,8 +143,8 @@ because it requires specific images, where more than 50% of bg is transparent or
   <div class="demo-cont__credits">
     <div class="demo-cont__credits-close"></div>
     <h2 class="demo-cont__credits-heading">Made by</h2>
-    <img src="//s3-us-west-2.amazonaws.com/s.cdpn.io/142996/profile/profile-512_5.jpg" alt="" class="demo-cont__credits-img" />
-    <h3 class="demo-cont__credits-name">Nikolay Talanov</h3>
+    <img src="" alt="" class="demo-cont__credits-img" />
+    <h3 class="demo-cont__credits-name">Brian Bauska</h3>
     <a href="https://codepen.io/suez/" target="_blank" class="demo-cont__credits-link">My codepen</a>
     <a href="https://twitter.com/bbauska" target="_blank" class="demo-cont__credits-link">My twitter</a>
     <h2 class="demo-cont__credits-heading">Based on</h2>
