--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ because it requires specific images, where more than 50% of bg is transparent or
   </div>
 </div>
 <!-- partial -->
-  <script  src="./js/script.js"></script>
+  <script  src="./js/scripts.js"></script>
 
 </body>
 </html>
