--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ because it requires specific images, where more than 50% of bg is transparent or
     <h2 class="demo-cont__credits-heading">Made by</h2>
     <img src="" alt="" class="demo-cont__credits-img" />
     <h3 class="demo-cont__credits-name">Brian Bauska</h3>
-    <a href="https://codepen.io/suez/" target="_blank" class="demo-cont__credits-link">My codepen</a>
+    <a href="https://codepen.io/BBauska/pen/qEOWovQ" target="_blank" class="demo-cont__credits-link">My codepen</a>
     <a href="https://twitter.com/bbauska" target="_blank" class="demo-cont__credits-link">My twitter</a>
     <h2 class="demo-cont__credits-heading">Based on</h2>
     <a href="https://dribbble.com/shots/2375246-Fashion-Butique-slider-animation" target="_blank" class="demo-cont__credits-link">Concept by Brian Bauska</a>
