--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ because it requires specific images, where more than 50% of bg is transparent or
           <div class="fnc-slide__content">
             <h2 class="fnc-slide__heading">
               <div class="fnc-slide__heading-line">
-                <span>Pretty</span>
+                <span>Pretty Girl &</span>
               </div>
               <div class="fnc-slide__heading-line">
-                <span>Girl</span>
+                <span>Bubbies</span>
               </div>
             </h2>
             <button type="button" class="fnc-slide__action-btn">
@@ -51,10 +51,10 @@ because it requires specific images, where more than 50% of bg is transparent or
           <div class="fnc-slide__content">
             <h2 class="fnc-slide__heading">
               <div class="fnc-slide__heading-line">
-                <span>Bubbies</span>
+                <span>Pretty Girl</span>
               </div>
               <div class="fnc-slide__heading-line">
-                <span>&amp; Pretty Girl</span>
+                <span></span>
               </div>
             </h2>
             <button type="button" class="fnc-slide__action-btn">
@@ -74,10 +74,10 @@ because it requires specific images, where more than 50% of bg is transparent or
           <div class="fnc-slide__content">
             <h2 class="fnc-slide__heading">
               <div class="fnc-slide__heading-line">
-                <span>Ronie</span>
+                <span>Pretty Girl</span>
               </div>
               <div class="fnc-slide__heading-line">
-                <span>&amp; Bubbies</span>
+                <span></span>
               </div>
             </h2>
             <button type="button" class="fnc-slide__action-btn">
@@ -97,10 +97,10 @@ because it requires specific images, where more than 50% of bg is transparent or
           <div class="fnc-slide__content">
             <h2 class="fnc-slide__heading">
               <div class="fnc-slide__heading-line">
-                <span>All</span>
+                <span>Pretty</span>
               </div>
               <div class="fnc-slide__heading-line">
-                <span>Three</span>
+                <span>Girl</span>
               </div>
             </h2>
             <button type="button" class="fnc-slide__action-btn">
