--- a/index.html
+++ b/index.html
@@ -121,19 +121,19 @@ because it requires specific images, where more than 50% of bg is transparent or
       </div>
       <div class="fnc-nav__controls">
         <button class="fnc-nav__control">
+          Pretty Girl &amp; Bubbies
+          <span class="fnc-nav__control-progress"></span>
+        </button>
+        <button class="fnc-nav__control">
           Pretty Girl
           <span class="fnc-nav__control-progress"></span>
         </button>
         <button class="fnc-nav__control">
-          Bubbies &amp; Pretty Girl
+          Pretty Girl
           <span class="fnc-nav__control-progress"></span>
         </button>
         <button class="fnc-nav__control">
-          Ronie &amp; Bubbies
-          <span class="fnc-nav__control-progress"></span>
-        </button>
-        <button class="fnc-nav__control">
-          All 3
+          Pretty Girl
           <span class="fnc-nav__control-progress"></span>
         </button>
       </div>
