--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@ because it requires specific images, where more than 50% of bg is transparent or
           <span class="fnc-nav__control-progress"></span>
         </button>
         <button class="fnc-nav__control">
-          Pretty Girl
+          Pretty Girl &amp; Bubbies
           <span class="fnc-nav__control-progress"></span>
         </button>
         <button class="fnc-nav__control">
-          Pretty Girl
+          Pretty Girl &amp; Bubbies
           <span class="fnc-nav__control-progress"></span>
         </button>
         <button class="fnc-nav__control">
