--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ because it requires specific images, where more than 50% of bg is transparent or
           <div class="fnc-slide__content">
             <h2 class="fnc-slide__heading">
               <div class="fnc-slide__heading-line">
-                <span>Pretty Girl</span>
+                <span>Pretty Girl &amp;</span>
               </div>
               <div class="fnc-slide__heading-line">
-                <span></span>
+                <span>Bubbies</span>
               </div>
             </h2>
             <button type="button" class="fnc-slide__action-btn">
@@ -74,10 +74,10 @@ because it requires specific images, where more than 50% of bg is transparent or
           <div class="fnc-slide__content">
             <h2 class="fnc-slide__heading">
               <div class="fnc-slide__heading-line">
-                <span>Pretty Girl</span>
+                <span>Pretty Girl &amp;</span>
               </div>
               <div class="fnc-slide__heading-line">
-                <span></span>
+                <span>Bubbies</span>
               </div>
             </h2>
             <button type="button" class="fnc-slide__action-btn">
